# synthetic-research-data-sharing

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: backend-implementer.md  code-reviewer.md  frontend-implementer.md  implementation-agent.md  implementation-planner.md  issue-planner.md  issue-runner.md  pr-writer.md  security-reviewer.md  spec-analyst.md  test-engineer.md
.claude/hooks/: format_py.py  guard_generated.py  scan_secrets.py
.claude/skills/code-review/: SKILL.md
.claude/skills/issue-driven-development/: SKILL.md
.claude/skills/issue-triage/: SKILL.md
.claude/skills/pr-from-issue/: SKILL.md
.claude/skills/pr-prep/: SKILL.md
.claude/skills/refactor-safely/: SKILL.md
.claude/skills/spec-implementation/: SKILL.md
.claude/skills/test-fix-loop/: SKILL.md
.claude/skills/worktree-task-runner/: SKILL.md
.github/ISSUE_TEMPLATE/: bugfix-task.yml  config.yml  implementation-task.yml  investigation-task.yml  refactor-task.yml
.github/workflows/: ci.yml  deploy.yml
docs/: SPEC.md  acceptance-criteria.md  branch-worktree-policy.md  implementation-plan.md  issue-management.md  review-checklist.md  task-granularity-guide.md
docs/20260623-issue-driven/: spec.txt
generator/: __init__.py  analyses.py  generate_data.py  render.py
generator/templates/: fragment.html.j2
site/: index.html
site/assets/: app.css
site/data/: catalog.json  raw.json  synthetic.json
site/data/renal-marker/: raw.json  synthetic.json
site/fragments/analyst/: association.html  survival.html
site/fragments/prostate-psa/analyst/: clustering.html
site/fragments/prostate-psa/owner/: association.html  clustering.html  survival.html
site/fragments/renal-marker/analyst/: association.html  clustering.html  survival.html
site/fragments/renal-marker/owner/: association.html  clustering.html  survival.html
tests/: conftest.py  test_analyses.py  test_catalog.py  test_generate_data.py  test_render.py  test_synthetic_vs_raw.py
tests/e2e/: conftest.py  helpers.py  test_analyze.py  test_catalog.py  test_demo.py  test_download.py  test_flow.py  test_login.py  test_owner_review.py  test_publish.py  test_register.py  test_review.py  test_review_canvas_exclusion.py  test_submit.py
