# uv プロジェクト設定。依存の単一の真実（requirements*.txt は廃止し本ファイルへ統合）。
# 実行・検証は `uv run ...` 経由（環境の python3/python 差を uv が吸収する）。

[project]
name = "synthetic-research-data-sharing"
version = "0.1.0"
description = "合成データで研究データを安全に共有する code-to-data / TRE 型ワークフローのデモ"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

# パッケージ配布は行わない（ビルド対象はあくまで site/）。
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["site"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import 整列, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# 実行/同期する Python（.python-version = 3.12）に合わせる。
# 3.11 だと numpy 等のスタブの `type` 文（3.12+）を解析できず失敗するため。
# コード自体は requires-python>=3.11 互換を保つ（ruff target は py311）。
python_version = "3.12"
# pandas / sklearn / jinja2 は型情報が不完全なため未解決 import を無視する
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
