# uv プロジェクト設定。依存の単一の真実（requirements*.txt は廃止し本ファイルへ統合）。
# 実行・検証は `uv run ...` 経由（環境の python3/python 差を uv が吸収する）。

[project]
name = "synthetic-research-data-sharing"
version = "0.1.0"
description = "合成データで研究データを安全に共有する code-to-data / TRE 型ワークフローのデモ"
requires-python = ">=3.12,<3.13"
# バージョンは厳密ピン（== ）。更新時は意図的に値を上げ、uv lock し直す。
dependencies = [
    "numpy==2.5.0",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
    "jinja2==3.1.6",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.18",
    "mypy==2.1.0",
    "pandas-stubs==3.0.3.260530",
    "pyyaml==6.0.3",
]

# パッケージ配布は行わない（ビルド対象はあくまで site/）。
[tool.uv]
package = false
# 以後 `uv add` は下限ではなく厳密一致（==）でピンする。
add-bounds = "exact"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["site"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import 整列, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# 実行/同期する Python（.python-version = 3.12, requires-python >=3.12,<3.13）に合わせる。
python_version = "3.12"
# pandas / sklearn / jinja2 は型情報が不完全なため未解決 import を無視する
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# リポジトリルートを import パスに加え、`from generator import ...` を解決する。
pythonpath = ["."]
